# AgentQA

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.embed  Dockerfile.llama  Makefile  README.md  compose.yml  main.py  pyproject.toml  qa.py
.github/workflows/: ci.yml
agent_qa/: __init__.py  agent.py  cli.py  config.py  knowledge.py
docs/: checkpoint.md  metrics.md
src/: main.py
src/agent_qa/: main.py
src/agent_qa/core/: config.py
src/agent_qa/infra/: knowledge.py  seed_knowledge.py
src/agent_qa/services/: agent_service.py
src/agent_qa/ui/: cli.py
src/api/: deps.py  router.py
src/api/ask/: controller.py  routes.py  schemas.py
src/api/docs/: controller.py  routes.py  schemas.py
src/api/questions/: controller.py  routes.py  schemas.py
src/core/: config.py
src/infra/: knowledge.py  logging.py  seed_knowledge.py
src/scripts/: seed_knowledge.py
src/services/: agent_service.py  ask_agent_service.py  question_agent_service.py
src/ui/: cli.py
tests/: conftest.py  test_ask.py  test_askservice.py  test_deps.py  test_docs.py  test_health.py  test_question.py  test_questionservice.py  test_seed.py
utils/: load_yaml.py
utils/prompts/: question_agent.yaml
