[project]
name = "agentqa"
version = "0.2.0"
description = "AgentQA: Sistema de Perguntas e Respostas com IA usando RAG local."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[ollama]>=2.5.0",
    "ddgs>=9.10.0",
    "lancedb>=0.29.2",
    "openai>=2.21.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[tool.setuptools.packages.find]
where = ["src"]
