[project]
name = "agentqa"
version = "0.2.0"
description = "AgentQA: Sistema de Perguntas e Respostas com IA usando RAG local."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[ollama]>=2.5.0",
    "ddgs>=9.10.0",
    "fastapi>=0.129.0",
    "lancedb>=0.29.2",
    "openai>=2.21.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.34.0",
]

# uv sync --extra dev
[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "pytest-pythonpath>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
